[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph_checkpoint_cosmosdb"
version = "0.2.7"
description = "LangGraph checkpoint saver for Azure CosmosDB with built-in message history pruning via agentstate-reducer"
authors = [{name = "Kamal", email = "skamalj@github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core",
    "langgraph",
    "azure-cosmos",
    "azure-identity"
]
keywords = [
    "langgraph", "checkpoint", "cosmosdb", "azure",
    "message-reducer", "agent-state", "memory", "langchain"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
reducer = [
    "agentstate-reducer>=0.1.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]


[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "langchain-openai",
    "langgraph-checkpoint-cosmosdb[reducer]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_cosmosdb"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3